@@ -28,51 +28,4 @@
         <binariesDir.kx-apps-mailing>${myDirectoryFolder}/myenterprise-web/target/classes</binariesDir.kx-apps-mailing>
         <targetBinariesDir.kx-apps-mailing>${myDirectoryFolder}/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-1.0-SNAPSHOT/WEB-INF/classes</targetBinariesDir.kx-apps-mailing>
     </properties>
-  
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>1.5.2-SNAPSHOT</version>
-                <inherited>false</inherited>
-                <configuration>
-                    <tomeeVersion>1.5.2-SNAPSHOT</tomeeVersion>
-                    <tomeeHttpPort>8080</tomeeHttpPort>
-                    <tomeeShutdownPort>8005</tomeeShutdownPort>
-                    <tomeeClassifier>webprofile</tomeeClassifier>
-                    <simpleLog>true</simpleLog>
-                    <removeDefaultWebapps>true</removeDefaultWebapps>
-                    <reloadOnUpdate>true</reloadOnUpdate>
-                    <keepServerXmlAsthis>true</keepServerXmlAsthis>
-                    <debug>false</debug>
-                    <debugPort>5005</debugPort>
-                    <args>-Dmyenterpise-web.host=mymailing.com -Dmyenterpise-web-2.host=mymailing2.com -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</args>
-                    <apps>
-                        <app>com.grupokx:myenterprise-ear:1.0-SNAPSHOT:ear</app>
-                    </apps>
-                    <libs>
-                        <lib>mysql:mysql-connector-java:5.1.19</lib>
-                    </libs>
-                    
-                    <synchronizations>
-                        <synchronization>
-                            <extensions>
-                                <extension>.class</extension>
-                            </extensions>
-                            <updateOnlyExtensions>
-                                <updateOnlyExtension>.xhtml</updateOnlyExtension>
-                                <updateOnlyExtension>.html</updateOnlyExtension>
-                                <updateOnlyExtension>.css</updateOnlyExtension>                            
-                            </updateOnlyExtensions>
-                            <resourcesDir>${resourcesDir.kx-apps-mailing}</resourcesDir>
-                            <targetResourcesDir>${targetResourcesDir.kx-apps-mailing}</targetResourcesDir>
-                            <binariesDir>${binariesDir.kx-apps-mailing}</binariesDir>
-                            <targetBinariesDir>${targetBinariesDir.kx-apps-mailing}</targetBinariesDir>
-                        </synchronization>
-                    </synchronizations>
-                </configuration>                
-            </plugin>
-        </plugins>
-    </build>
 </project>
